--- a/overview/modules/ROOT/pages/index.adoc
+++ b/overview/modules/ROOT/pages/index.adoc
@@ -1,6 +1,6 @@
 = Solutions Delivery Platform
 
-The Solutions Delivery Platform (SDP) is an accumulation of Booz Allen's
+The some random change Solutions Delivery Platform (SDP) is an accumulation of Booz Allen's
 lessons learned implementing DevSecOps practices across multiple client
 projects and RFP Tech Challenges such as NSF, GSA IAE, CMS PECOS, and
 Grants.Gov.
