update landing page

--- a/overview/modules/ROOT/pages/index.adoc
+++ b/overview/modules/ROOT/pages/index.adoc
@@ -2,8 +2,7 @@
 
 The some random change Solutions Delivery Platform (SDP) is an accumulation of Booz Allen's
 lessons learned implementing DevSecOps practices across multiple client
-projects and RFP Tech Challenges such as NSF, GSA IAE, CMS PECOS, and
-Grants.Gov.
+projects and RFP Tech Challenges.
 
 At Booz Allen, DevSecOps is a foundational element of our Modern
 Software development Approach
