add iron bank docs

--- a/overview/modules/ROOT/nav.adoc
+++ b/overview/modules/ROOT/nav.adoc
@@ -1,2 +1,3 @@
 * xref:index.adoc[Welcome]
 * xref:contribute-to-docs.adoc[Contribute to this Documentation]
+* xref:iron-bank.adoc[SDP in Iron Bank]
