--- a/learning-labs/modules/local-development/pages/2-run-jenkins.adoc
+++ b/learning-labs/modules/local-development/pages/2-run-jenkins.adoc
@@ -33,7 +33,7 @@ docker build -t jenkins:lts-docker .
 
 [NOTE]
 ====
-Running Jenkins as a docker container on a BAH managed machine requires specific certificates and tooling to be installed. A Dockerfile meeting these requirements can be built from the solutions-delivery-platform/bah-jenkins repo available internally.
+Running Jenkins as a docker container on a BAH managed machine requires specific certificates and tooling to be installed. A Dockerfile meeting these requirements can be built from the https://github.boozallencsn.com/solutions-delivery-platform/bah-jenkins[solutions-delivery-platform/bah-jenkins] repo.
 ====
 
 Then, to start jenkins, run:
