--- a/learning-labs/modules/local-development/pages/index.adoc
+++ b/learning-labs/modules/local-development/pages/index.adoc
@@ -4,7 +4,5 @@
 
 How to deploy a Jenkins instance on your local machine using Docker that can:
 
-* Run containers as part of the CI/CD pipeline
-* Leverage the Jenkins Templating Engine
-
-
+* Run containers as part of a CI/CD pipeline.
+* Leverage the Jenkins Templating Engine.
